# diffler

./: .gitignore  .jscpd.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  deny.toml  flake.nix  justfile  opencode.json  typos.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
Formula/: diffler.rb
bucket/: diffler.json
claudedocs/: codeberg-multi-remote-findings.md
crates/diffler/: Cargo.toml
crates/diffler-ci/: Cargo.toml
crates/diffler-ci/src/: detect.rs  exec.rs  lib.rs  model.rs  provider.rs
crates/diffler-ci/src/providers/: github.rs  gitlab.rs  mod.rs
crates/diffler-core/: Cargo.toml
crates/diffler-core/benches/: pipeline.rs
crates/diffler-core/src/: diff.rs  feedback.rs  git.rs  highlight.rs  lib.rs  model.rs  pairing.rs  repo.rs  review.rs  session.rs  source.rs  store.rs  test_support.rs  vcs.rs
crates/diffler-core/src/syntax/: intraline.rs  mod.rs  registry.rs  scope.rs
crates/diffler-core/tests/: facade.rs  git_backend.rs
crates/diffler-core/tests/common/: mod.rs
crates/diffler-graph/: Cargo.toml
crates/diffler-graph/src/: engine.rs  lib.rs  model.rs  theme.rs  view.rs
crates/diffler-graph/src/snapshots/: diffler_graph__view__tests__renders_the_demo_with_a_group_container.snap
crates/diffler/src/: clipboard.rs  config.rs  editor.rs  event.rs  keymap.rs  lib.rs  main.rs  mcp.rs  search.rs  test_support.rs  theme.rs  transient.rs  tree.rs  ui.rs  watch.rs
crates/diffler/src/app/: blast.rs  ci.rs  ci_log.rs  commands.rs  commit.rs  diff.rs  enrich.rs  expand.rs  fuzzy.rs  log.rs  logs.rs  markdown.rs  mcp.rs  mod.rs  modal.rs  network.rs  pr.rs  search.rs  status.rs
crates/diffler/src/ci/: detect.rs  error.rs  exec.rs  mod.rs  model.rs  provider.rs
crates/diffler/src/ci/providers/: forgejo.rs  github.rs  gitlab.rs  mod.rs
crates/diffler/src/graph/: engine.rs  github.rs  mod.rs  model.rs  theme.rs  tui_nodes.rs  view.rs
crates/diffler/src/graph/snapshots/: diffler__graph__tests__code_graph_renders.snap  diffler__graph__tests__collapsing_the_matrix_folds_it_to_one_node.snap  diffler__graph__tests__demo_graph_renders.snap  diffler__graph__tests__only_the_group_root_folds_and_round_trips.snap  diffler__graph__tests__release_workflow_graph_renders.snap  diffler__graph__tests__zoom_in_renders_detail_with_status.snap  diffler__graph__tests__zoom_out_renders_a_compact_overview.snap  diffler__graph__tui_nodes__tests__tui_nodes_renders_the_demo.snap  diffler__graph__view__tests__renders_the_demo_with_a_group_container.snap
crates/diffler/src/lsp/: client.rs  mod.rs  registry.rs
crates/diffler/src/snapshots/: diffler__ui__tests__placeholder_renders.snap
crates/diffler/src/ui/: ci_log.rs  diff.rs  diff_render.rs  graph.rs  log.rs  logs.rs  mod.rs  popup.rs  prs.rs  runs.rs  status.rs
crates/diffler/src/ui/snapshots/: diffler__ui__ci_log__tests__renders_folded_steps_by_default.snap  diffler__ui__ci_log__tests__renders_real_steps_with_status_and_duration.snap  diffler__ui__ci_log__tests__renders_waiting_state_when_empty.snap  diffler__ui__diff__tests__comment_blocks_render_open_and_replied_threads.snap  diffler__ui__diff__tests__comment_input_modal_renders_over_the_diff.snap  diffler__ui__diff__tests__commit_diff_opened_from_the_log_renders.snap  diffler__ui__diff__tests__diff_pane_renders_with_syntax_emphasis_and_gutter.snap  diffler__ui__diff__tests__expand_whole_file_reveals_the_unchanged_lines.snap  diffler__ui__diff__tests__fenced_code_block_in_a_comment_is_syntax_highlighted.snap  diffler__ui__diff__tests__file_header_shows_resolved_when_all_comments_are_resolved.snap  diffler__ui__diff__tests__folded_viewed_file_renders_collapsed_with_marks.snap  diffler__ui__diff__tests__long_comment_text_wraps_to_the_pane_width.snap  diffler__ui__diff__tests__long_diff_lines_wrap_instead_of_clipping.snap  diffler__ui__diff__tests__markdown_diff_highlights_headings_and_inline_code.snap  diffler__ui__diff__tests__markdown_in_a_comment_body_renders_styled.snap  diffler__ui__diff__tests__range_diff_from_the_log_renders_with_a_range_header.snap  diffler__ui__diff__tests__review_layout_sidebar_buckets_viewed_files.snap  diffler__ui__diff__tests__review_verdict_picker_renders_its_choices.snap  diffler__ui__diff__tests__side_by_side_pane_renders_old_and_new_columns.snap  diffler__ui__diff__tests__sidebar_focus_renders_the_file_list_and_first_file_diff.snap  diffler__ui__diff__tests__sidebar_renders_as_a_flat_list_when_configured.snap  diffler__ui__diff__tests__viewed_file_shows_a_check_and_comment_count_in_the_sidebar.snap  diffler__ui__diff__tests__viewed_walk_advances_the_selection.snap  diffler__ui__diff__tests__viewed_walk_folds_files_and_advances_the_cursor.snap  diffler__ui__diff__tests__visual_selection_highlights_the_selected_rows.snap  diffler__ui__diff_render__tests__hunk_renders_header_gutter_and_emphasis.snap  diffler__ui__graph__tests__renders_artifacts_and_annotations_panel.snap  diffler__ui__log__tests__log_screen_renders_rows_with_refs_and_cursor.snap  diffler__ui__log__tests__log_visual_selection_highlights_the_range.snap  diffler__ui__logs__tests__renders_accumulated_log_text.snap  diffler__ui__logs__tests__renders_folded_steps_by_default.snap  diffler__ui__logs__tests__renders_real_steps_with_status_and_duration.snap  diffler__ui__logs__tests__renders_waiting_state_when_empty.snap  diffler__ui__popup__tests__confirm_dialog_renders_centered.snap  diffler__ui__popup__tests__input_modal_renders_a_two_line_buffer.snap  diffler__ui__popup__tests__input_modal_renders_with_cursor.snap  diffler__ui__popup__tests__input_modal_wraps_a_long_line_onto_multiple_rows.snap  diffler__ui__popup__tests__popup_renders_as_bottom_split.snap  diffler__ui__popup__tests__popup_wraps_into_columns_when_too_tall_to_fit.snap  diffler__ui__popup__tests__which_key_panel_renders_the_commit_transient.snap  (+30 more)
crates/diffler/tests/: config_layering.rs  lsp_client.rs  mcp_server.rs
crates/diffler/tests/common/: mod.rs
demos/: SPEC.md
docs/: config.example.toml  mcp.md
(+78 files in other folders)
