[workspace]
resolver = "3"
members = ["crates/diffler", "crates/diffler-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matheusfillipe/diffler"
homepage = "https://github.com/matheusfillipe/diffler"
authors = ["Matheus Fillipe"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["diff", "tui", "code-review", "mcp", "agents"]

# Deps for M1-M4 are pre-staged here so CI build times and target coverage
# (musl, arm64, windows) are validated before the real implementation lands.
[workspace.dependencies]
diffler-core = { path = "crates/diffler-core", version = "0.1.0" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
thiserror = "2"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
similar = { version = "2", features = ["inline", "unicode"] }
notify = "8.2"
notify-debouncer-full = "0.7"
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
async-lsp = { version = "0.2", features = ["tokio"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = "1.47"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# restriction lints that catch LLM-generated mistakes
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"
indexing_slicing = "warn"
# pedantic noise control
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
