[workspace]
resolver = "3"
members = ["crates/diffler", "crates/diffler-core"]

[workspace.package]
version = "0.2.7"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matheusfillipe/diffler"
homepage = "https://github.com/matheusfillipe/diffler"
authors = ["Matheus Fillipe"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["diff", "tui", "code-review", "mcp", "agents"]

# Deps for M1-M4 are pre-staged here so CI build times and target coverage
# (musl, arm64, windows) are validated before the real implementation lands.
[workspace.dependencies]
diffler-core = { path = "crates/diffler-core", version = "0.2.7" }
ratatui = "0.30"
async-trait = "0.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "net"] }
clap = { version = "4.6", features = ["derive"] }
color-eyre = "0.6"
thiserror = "2"
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
similar = { version = "3", features = ["inline", "unicode"] }
notify = "8.2"
notify-debouncer-full = "0.7"
futures-util = { version = "0.3", default-features = false }
rmcp = { version = "2", features = ["server", "transport-streamable-http-server"] }
axum = "0.8"
async-lsp = { version = "0.2", features = ["tokio"] }
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
syndiff = "0.2"
# bundled grammars (statically linked; musl-static cannot dlopen, so no runtime fetch)
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-yaml = "0.7"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
# serde_norway parses GitHub Actions workflow YAML for the CI dependency graph
serde_norway = "0.9"
# perf benches for the diff pipeline (core hot paths)
criterion = "0.8"
toml = "1"
uuid = { version = "1", features = ["v4"] }
unicode-width = "0.2"
insta = "1.47"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# restriction lints that catch LLM-generated mistakes
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "warn"
indexing_slicing = "warn"
# pedantic noise control
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"

# keep panic backtraces for our own code, but drop the heavy debuginfo from
# dependencies (we never step-debug into them) — cuts target/debug ~3-4x
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
