[package]
name = "diffler-ci"
description = "Provider-agnostic CI run/job/log acquisition for diffler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# not published yet: the API is still settling behind the binary
publish = false

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
