[package]
name = "diffler-core"
description = "Core review engine for diffler: diffs, sessions, comments, viewed marks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
git2.workspace = true
similar.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
syntect.workspace = true
two-face.workspace = true
# runtime dependency: store's atomic save writes through a NamedTempFile
tempfile.workspace = true

[lints]
workspace = true
