[package]
name = "diffler-core"
description = "Core review engine for diffler: diffs, sessions, comments, viewed marks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
git2.workspace = true
similar.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
syndiff.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-json.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
# runtime dependency: store's atomic save writes through a NamedTempFile
tempfile.workspace = true

[lints]
workspace = true
