[package]
name = "diffler"
description = "Terminal code review for AI coding agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
diffler-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
clap.workspace = true
color-eyre.workspace = true
# pre-staged for M1 (MCP server), M4 (LSP), M1 (watcher/highlighting):
# kept as build dependencies now to validate CI build times across targets.
rmcp.workspace = true
axum.workspace = true
async-lsp.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
syntect.workspace = true
two-face.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
