[package]
name = "diffler"
description = "Terminal code review for AI coding agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
diffler-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
async-trait.workspace = true
time.workspace = true
futures-util.workspace = true
clap.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_ignored.workspace = true
thiserror.workspace = true
toml.workspace = true
rmcp.workspace = true
axum.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde_json.workspace = true
unicode-width.workspace = true
# pre-staged for the LSP client; validates CI build times across targets
url.workspace = true
# the GitHub CI source parses workflow YAML into the graph Model
serde_norway.workspace = true

[dev-dependencies]
git2.workspace = true
insta.workspace = true
tempfile.workspace = true
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client-reqwest"] }
# test-util enables the paused clock for long-poll timeout tests
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
